# QuickLookup

./: CMakeLists.txt  CMakePresets.json  ClipboardLin.h  ClipboardWin.h  Example.cpp  LICENSE  Navigation.h  QuickLookup.cpp  QuickLookup.h  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-single-platform.yml
src/: ClipboardWin.h
